--- a/src/app/panel/directorios/usuarios/usuarios.component.html
+++ b/src/app/panel/directorios/usuarios/usuarios.component.html
@@ -62,6 +62,20 @@
                   <i class="fas fa-ellipsis-h"></i>
               </button>
             </td>
+            <div class="more-float">
+              <button>
+                  <i class="fas fa-key"></i>
+                  Deshabilitar
+              </button>
+              <button>
+                  <i class="fas fa-edit"></i>
+                  Edit
+              </button>
+              <button>
+                  <i class="fas fa-trash-alt"></i>
+                  Delete
+              </button>
+            </div>
           </tr>
         </tbody>
       </table>
@@ -110,6 +124,20 @@
                   <i class="fas fa-ellipsis-h"></i>
               </button>
             </td>
+            <div class="more-float">
+              <button>
+                  <i class="fas fa-key"></i>
+                  Deshabilitar
+              </button>
+              <button>
+                  <i class="fas fa-edit"></i>
+                  Edit
+              </button>
+              <button>
+                  <i class="fas fa-trash-alt"></i>
+                  Delete
+              </button>
+            </div>
           </tr>
         </tbody>
       </table>
@@ -148,6 +176,20 @@
                   <i class="fas fa-ellipsis-h"></i>
               </button>
             </td>
+            <div class="more-float">
+              <button>
+                  <i class="fas fa-key"></i>
+                  Deshabilitar
+              </button>
+              <button>
+                  <i class="fas fa-edit"></i>
+                  Edit
+              </button>
+              <button>
+                  <i class="fas fa-trash-alt"></i>
+                  Delete
+              </button>
+            </div>
           </tr>
         </tbody>
       </table>
