--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,3 +1,19 @@
-<p>
-  login works!
-</p>
+<section>
+  <div class="banner">
+    <img class="banner-img" src="./assets/img/login/BG.png" alt="banner">
+    <img class="banner-logo" src="./assets/img/login/Logo - Wizi.png" alt="logo">
+  </div>
+  <div class="log-in">
+    <mat-form-field appearance="outline">
+      <mat-label>Outline form field</mat-label>
+      <input matInput placeholder="Placeholder">
+      <mat-hint>Hint</mat-hint>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Outline form field</mat-label>
+      <input matInput placeholder="Placeholder">
+      <mat-hint>Hint</mat-hint>
+    </mat-form-field>
+    <button mat-button class="bg-pink" >Iniciar sesion</button>
+  </div>
+</section>
