--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.css";  
+@import "~bootstrap/dist/css/bootstrap.css";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+$pink : '#C02278';
+
+.bg-pink{
+    background-color: $pink
+}
