--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -22,3 +22,10 @@ section{
     top: 20%;
     left: 40%;
 }
+
+.log-in{
+    width: 50%;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: column;
+}
