--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,29 @@ $pink : #C02278;
 .bg-pink{
     background: $pink!important;
 }
+
+.active-link{
+  background: $pink;
+  border-radius: 10px;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+    border-radius: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
