--- a/src/app/panel/directorios/usuarios/usuarios.component.html
+++ b/src/app/panel/directorios/usuarios/usuarios.component.html
@@ -6,7 +6,7 @@
         <div class="user-head">
             <h2>Usuarios</h2>
             <div class="user-buttons">
-                <a><i class="fas fa-plus"></i></a>
+                <a (click)="navigate()" *ngIf="nav != 'client'"><i class="fas fa-plus"></i></a>
                 <a><i class="fas fa-bell"></i></a>
                 <div class="number-pink">3</div>
                 <div class="input">
@@ -44,7 +44,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let user of client">
+                    <tr *ngFor="let user of GetAdmins">
                         <td>
                             <img src="./../../../../assets/descarga.png" />
                         </td>
@@ -100,7 +100,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let user of client">
+                    <tr *ngFor="let user of GetWizis">
                         <td class="five">
                             <img src="./../../../../assets/descarga.png" />
                         </td>
@@ -158,7 +158,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let user of client">
+                    <tr *ngFor="let user of GetClients">
                         <td>
                             <img src="./../../../../assets/descarga.png" />
                         </td>
