--- a/src/app/panel/directorios/usuarios/usuarios.component.html
+++ b/src/app/panel/directorios/usuarios/usuarios.component.html
@@ -44,7 +44,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let user of GetAdmins" (click)="editAdmin()">
+                    <tr *ngFor="let user of GetAdmins" (click)="editAdmin();">
                         <td>
                             <img src="./../../../../assets/descarga.png" />
                         </td>
@@ -158,7 +158,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let user of GetClients">
+                    <tr *ngFor="let user of GetClients" (click)="client()">
                         <td>
                             <img src="./../../../../assets/descarga.png" />
                         </td>
